# plover-current-time

./: .gitignore  README.md  compile.bat  current_time.py  date_modifiers.py  date_state.json  requirements.txt  setup.cfg
plover_current_time_modal/: __init__.py  date_modifiers.py  date_offset.json  date_state.json
plover_current_time_modal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
