[metadata]
name = plover_current_time_modal
version = 1.1.2
description = Plover plugin for inserting the current time in an strftime format
long_description = file:README.md
long_description_content_type = text/markdown
author = Merlin Wyschka
author_email = s.a.w.merlin@gmail.com
url = https://github.com/merlinsaw/plover-current-time
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
install_requires =
  plover>=4.0.0.dev12
packages =
  plover_current_time_modal

[options.entry_points]
plover.dictionary =
  current_time = plover_current_time_modal.date_modifiers:lookup
  current_time_reverse = plover_current_time_modal.date_modifiers:reverse_lookup
